package utils;

public interface Prioritizable {
    public int getPriority();
    public void setPriority(int p);
}

