@startuml
abstract BaseCollider
abstract MarioCollider
interface Prioritizable
interface CommandMarioStatus

DefaultMarioCollider -u-|> MarioCollider

FireMarioCollider -u-|> SuperMarioCollider

SuperMarioCollider -u-|> MarioCollider

MarioCollider -u-|> BaseCollider
MarioCollider .u.|> UpdateableEntityCollider
MarioCollider .u.|> Prioritizable
MarioCollider "1" --> "1" Mario
MarioCollider "1" --> "2" MarioCollider

CommandMarioStatus .u.|> Prioritizable
MarioCollider "1" --> "1" CommandMarioStatus

InvulnerableCollider -u-|> MarioCollider

StarMarioCollider -u-|> MarioCollider
@enduml
